# dp2026_auto_aim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  run.sh
data/uniconfig/: Config.json  guard.sh
demo/: CMakeLists.txt
doc/: Jetson配置.md
docker/: Dockerfile  build_linux.sh  run_linux.sh
include/data_manager/: base.h  param.h
include/garage/: wrapper_tower.h
include/threads/: control.h
include/threads/control/: structure.h
setup/: OpenCV-4-10-0-amd64.sh  OpenCV-4-10-0-arm64.sh
src/: main.cpp
src/data_manager/: CMakeLists.txt  init.cpp
src/garage/: CMakeLists.txt  wrapper_rune.cpp  wrapper_tower.cpp
src/tensorrt/: CMakeLists.txt  tensorrt.cpp
src/threads/: CMakeLists.txt  control.cpp  pipeline.cpp
src/threads/control/: receive_thread.cpp  send_thread.cpp
src/threads/pipeline/: image_thread.cpp
src/threads/pipeline/baseline/: detector_thread.cpp  preprocessor_thread.cpp
src/threads/pipeline/baseline/tracker/: pointer.cpp
src/threads/pipeline/fourpoints/: detector_thread.cpp  preprocessor_thread.cpp
src/threads/pipeline/rune/: detector_thread.cpp  preprocessor_thread.cpp
terminal/: CMakeLists.txt
